# empheral

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md  conformance-plan.md  decision.md  design-final-v2.md  design-final.md  design-round7-tightenings.md  design-round8-operational-tightenings.md  design-v1.md  design-v2.md  design-v3.md  no-go-preemptive.md  redteam-round1.md  redteam-round2.md  redteam-round3.md  skeptic-review.md
.github/workflows/: ci.yml  deploy-web-verifier.yml
conformance/: README.md  anomaly-detect.json  anomaly-library-reject.json  audit-replay.json  canonicalization.json  delegation-scope.json  fuzz-baseline.json  pcr-attestation-reject-c2-5-rekor.json  pcr-attestation-reject-c2-live.json  pcr-attestation-reject.json  reference-sensitive-paths.json  schema.json  tariff-reject-c3-c-classifier.json  tariff-reject.json
planning/: canon-signer.md
planning/claude-design/: BRIEF.md  DESIGN.md  HANDOFF.md  MAC-CONTINUE.md  PROTOTYPE_BRIEF.md  (+1 more)
reference/validator/: Cargo.toml  README.md
reference/validator/crates/ephemeral-anomaly/: Cargo.toml
reference/validator/crates/ephemeral-anomaly/src/: dedup_ledger.rs  errors.rs  evaluators.rs  event.rs  families.rs  fire.rs  invariants.rs  ledger.rs  lib.rs  orchestrator.rs  patterns.rs  schema.rs  scope.rs  scope_match.rs  signature.rs  state.rs  test_fixtures.rs
reference/validator/crates/ephemeral-anomaly/tests/: firing_rules.rs  ledger_behavior.rs  minimum_library.rs  residual_risks_closed.rs  state_machine_skeleton.rs  stream_normalization.rs
reference/validator/crates/ephemeral-attestation/: Cargo.toml
reference/validator/crates/ephemeral-attestation-test-support/: Cargo.toml
reference/validator/crates/ephemeral-attestation-test-support/src/: ca.rs  cose.rs  der.rs  lib.rs  payload.rs
reference/validator/crates/ephemeral-attestation/src/: anchors.rs  cert.rs  cose_bridge.rs  error.rs  lib.rs  nitro.rs  pcr.rs  rekor.rs  size_guard.rs
reference/validator/crates/ephemeral-attestation/tests/: helpers.rs  nitro.rs  proptest_total.rs  rekor.rs
reference/validator/crates/ephemeral-classifier/: Cargo.toml
reference/validator/crates/ephemeral-classifier/src/: config.rs  errors.rs  hash.rs  lib.rs  limiter.rs  output.rs  runtime.rs  signature.rs  test_fixtures.rs  validate.rs
reference/validator/crates/ephemeral-cli/: Cargo.toml
reference/validator/crates/ephemeral-cli/src/: main.rs
reference/validator/crates/ephemeral-cli/tests/: attestation_mode.rs
reference/validator/crates/ephemeral-core/: Cargo.toml
reference/validator/crates/ephemeral-core/src/: error.rs  lib.rs  runner.rs  suite_file.rs  types.rs
reference/validator/crates/ephemeral-core/src/cbor/: mod.rs
reference/validator/crates/ephemeral-core/src/codec/: mod.rs
reference/validator/crates/ephemeral-core/src/schema/: mod.rs
reference/validator/crates/ephemeral-core/src/suites/: anomaly_detect.rs  anomaly_library.rs  audit.rs  canonicalization.rs  crypto_support.rs  delegation.rs  fuzz.rs  mod.rs  pcr.rs  tariff.rs
reference/validator/crates/ephemeral-core/tests/: integration.rs
reference/validator/crates/ephemeral-crypto/: Cargo.toml
reference/validator/crates/ephemeral-crypto/src/: alg.rs  anchors.rs  chain.rs  cose.rs  error.rs  lib.rs  size_guard.rs  verify.rs
reference/validator/crates/ephemeral-crypto/tests/: verify.rs
reference/validator/tools/canon-signer/: Cargo.toml  README.md
reference/validator/tools/canon-signer/crates/canon-verify-wasm/: Cargo.toml
reference/validator/tools/canon-signer/crates/canon-verify-wasm/examples/: dump_golden.rs
reference/validator/tools/canon-signer/crates/canon-verify-wasm/src/: canon.rs  lib.rs  payload.rs  result.rs  steps.rs
reference/validator/tools/canon-signer/crates/canon-verify-wasm/tests/: aad_parity.rs  kid_parity.rs  payload_parity.rs  roundtrip_native.rs  wasm_golden.rs
reference/validator/tools/canon-signer/crates/canon-verify-wasm/tests/fixtures/: mod.rs
reference/validator/tools/canon-signer/docs/: EXPLAINER.md  HACKATHON.md  PRESENT-KIT.md  README.md  SETUP-MAC-FULL.md  SETUP-MAC.md  STAGE-SCRIPT.de.md  STAGE-SCRIPT.en.md  STORY.de.md  STORY.en.md  TECHNICAL.md  VALIDATION.md
reference/validator/tools/canon-signer/docs/diagrams/: architecture.excalidraw  cbor-layout.excalidraw  chain.excalidraw  generate.py  notary.excalidraw  review-swarm.excalidraw
reference/validator/tools/canon-signer/scripts/: demo.sh  make-qr.py  smoke.sh
reference/validator/tools/canon-signer/src/: cose.rs  event.rs  io.rs  key.rs  lib.rs  main.rs
reference/validator/tools/canon-signer/tests/: chain.rs  error_recovery.rs  persistence.rs  round_trip.rs  smoke.rs  verify_cli.rs
reference/validator/tools/canon-signer/tests/common/: mod.rs
reference/validator/tools/canon-signer/web/: README.md  app.js  index.html  style.css
reference/validator/tools/canon-signer/web/pkg/: canon_verify_wasm.d.ts  canon_verify_wasm.js  canon_verify_wasm_bg.wasm  canon_verify_wasm_bg.wasm.d.ts  package.json
reference/validator/tools/canon-signer/web/pkg-node/: canon_verify_wasm.d.ts  canon_verify_wasm.js  package.json
reference/validator/tools/canon-signer/web/test/: smoke.mjs
reference/validator/tools/print-root-fingerprint/: Cargo.toml
reference/validator/tools/print-root-fingerprint/src/: main.rs
reference/validator/tools/prod-symbol-probe/: Cargo.toml
reference/validator/tools/prod-symbol-probe/src/: main.rs
reference/validator/tools/prod-symbol-probe/tests/: no_leak.rs
reference/validator/tools/vector-signer/: Cargo.toml
reference/validator/tools/vector-signer/src/: main.rs  merkle.rs  phase_c2_5.rs  phase_c3_c.rs  phase_c3_c_fuzz.rs  phase_c4_audit.rs  phase_c4_detect.rs  phase_c4_library.rs
reference/validator/tools/vector-signer/src/phase_c4_audit/: accepts.rs  fires_multi_tenant.rs  fires_single_tenant.rs  helpers.rs  rotation.rs  stream_errors.rs
reference/validator/tools/vector-signer/tests/: determinism.rs  determinism_c2_5.rs  determinism_c3_c.rs  determinism_c4_audit.rs  determinism_c4_detect.rs  determinism_c4_library.rs  determinism_fuzz.rs
