[workspace]
resolver = "2"
members = [
    "crates/ephemeral-core",
    "crates/ephemeral-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ThePyth0nKid/empheral"
rust-version = "1.75"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
jsonschema = { version = "0.29", default-features = false }
clap = { version = "4.5", features = ["derive"] }
unicode-normalization = "0.1"
caseless = "0.2"
proptest = "1.5"
hex = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
