[workspace]
resolver = "2"
members = [
    "crates/ephemeral-attestation",
    "crates/ephemeral-attestation-test-support",
    "crates/ephemeral-cli",
    "crates/ephemeral-core",
    "crates/ephemeral-crypto",
    "tools/prod-symbol-probe",
    "tools/vector-signer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ThePyth0nKid/empheral"
rust-version = "1.75"
authors = ["Nelson Mehlis <nelson.mehlis@igoultra.de>"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
jsonschema = { version = "0.29", default-features = false }
clap = { version = "4.5", features = ["derive"] }
unicode-normalization = "0.1"
caseless = "0.2"
proptest = "1.5"
hex = "0.4"
time = { version = "0.3", features = ["parsing", "formatting", "macros"] }
coset = "0.4"
ed25519-dalek = "2.2"
ciborium = "0.2"
zeroize = "1.8"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# Dedicated profile for the feature-leak guard probe
# (`tools/prod-symbol-probe`).  Intentionally unoptimized — what we test
# is the *compilation* of `ephemeral-core` without its `test-fixtures`
# feature.  Optimizations (LTO, DCE, symbol stripping) would delete
# symbol names even when the items were compiled in, masking a real
# leak.  `debug = 0` removes DWARF so doc-comment text cannot create
# false positives for substring searches.  Do NOT reuse this profile
# for shipped binaries — it is a static-analysis artifact, not a
# production target.
[profile.symbol-probe]
inherits = "dev"
strip = "none"
debug = 0
lto = false
codegen-units = 16
opt-level = 0
incremental = false
