[workspace]
resolver = "2"
members = [
    "crates/ephemeral-anomaly",
    "crates/ephemeral-attestation",
    "crates/ephemeral-attestation-test-support",
    "crates/ephemeral-classifier",
    "crates/ephemeral-cli",
    "crates/ephemeral-core",
    "crates/ephemeral-crypto",
    "tools/canon-signer",
    "tools/canon-signer/crates/canon-verify-wasm",
    "tools/print-root-fingerprint",
    "tools/prod-symbol-probe",
    "tools/vector-signer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ThePyth0nKid/empheral"
rust-version = "1.75"
authors = ["Nelson Mehlis <nelson.mehlis@igoultra.de>"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
jsonschema = { version = "0.29", default-features = false }
clap = { version = "4.5", features = ["derive"] }
unicode-normalization = "0.1"
caseless = "0.2"
proptest = "1.5"
hex = "0.4"
# `parsing` is the only feature actually consumed across the workspace:
# every `time` user goes through `OffsetDateTime::parse(..., &Rfc3339)`.
# No production or test code uses `formatting` (no `.format(...)` calls)
# or `macros` (no `datetime!`/`date!`).  Keeping the surface narrow
# limits compile-time exposure if a future CVE hits the broader feature
# set; widen deliberately if a new consumer needs it.
time = { version = "0.3", features = ["parsing"] }
coset = "0.4"
ed25519-dalek = "2.2"
ciborium = "0.2"
# serde_bytes enables canonical CBOR byte-string encoding for Vec<u8>
# and &[u8] fields (ciborium's default maps `Vec<u8>` to a CBOR array
# of uints — wrong shape for our 32-byte hash payload).
serde_bytes = "0.11"
zeroize = "1.8"
# `sha2` ships both as a runtime dep (classifier WASM-hash verifier,
# attestation PCR fingerprinting) and as a dev-dep (anomaly byte-
# equality tripwire in `tests/minimum_library.rs`, vector-signer
# conformance-vector hashing).  Promoted to a workspace dep so every
# consumer resolves the same version — two copies of the hash crate
# in the dep graph would hash-compare byte-equal but produce a
# double-inclusion lockfile-resolver surprise at version-bump time.
sha2 = "0.10"
# `base64` is used only by `tools/canon-signer` to encode the raw Ed25519
# public key into the `ed25519:<base64(32-bytes)>` wire string returned
# on each sign response.  No other crate in the workspace needs it today;
# listed here so future consumers resolve the same version.
base64 = "0.22"
# `rand_core` exposes the `OsRng` needed by `canon-signer` for the
# auto-generated fallback identity when no keyfile / env is supplied.
# Pin at the version `ed25519-dalek 2.2` re-exports so the two resolve
# to the same crate in the dependency graph.
rand_core = { version = "0.6", features = ["std"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# Dedicated profile for the feature-leak guard probe
# (`tools/prod-symbol-probe`).  Intentionally unoptimized — what we test
# is the *compilation* of `ephemeral-core` without its `test-fixtures`
# feature.  Optimizations (LTO, DCE, symbol stripping) would delete
# symbol names even when the items were compiled in, masking a real
# leak.  `debug = 0` removes DWARF so doc-comment text cannot create
# false positives for substring searches.  Do NOT reuse this profile
# for shipped binaries — it is a static-analysis artifact, not a
# production target.
[profile.symbol-probe]
inherits = "dev"
strip = "none"
debug = 0
lto = false
codegen-units = 16
opt-level = 0
incremental = false
