[package]
name = "ephemeral-classifier"
description = "EPHEMERAL Classifier WASM execution primitives (wasmi-based, hermetic, deterministic)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
# `test_fixtures` gates the `src/test_fixtures.rs` module: canned
# WAT-source templates, pre-compiled WASM artifact pool, a fixed-seed
# classifier signing key, and the `sign_classifier_envelope` helper.
# The feature is consumed via `features = ["test_fixtures"]` by
# downstream test-only crates (notably `ephemeral-core`'s dev-deps) so
# fixture-construction logic lives in exactly one place.  It MUST NOT
# appear in any production dependency spec; the `ephemeral-prod-symbol-probe`
# rlib-scan invariant fails if `shared_wasm_artifacts` or
# `sign_classifier_envelope` land in a build that does not opt in.
test_fixtures = ["dep:wat", "dep:ed25519-dalek", "dep:coset"]

[dependencies]
# wasmi 0.47.2 is the latest stable (2026-04).  Chosen over wasmtime for
# this security-critical validator path because:
#   - Interpreter-only: no JIT codegen attack surface, no per-arch
#     Cranelift miscompiles (cf. 2026-04-09 advisory batch on aarch64).
#   - Determinism by construction — no NaN canonicalization, no relaxed-SIMD,
#     no version-dependent fuel cost model.
#   - Small TCB (2 direct deps, `no_std`-compatible) — important for
#     future Nitro Enclave deployment of the validator.
# `default-features = false` drops the `wat` dev-capability from the
# production build; WAT compilation stays a test-only dev-dependency.
wasmi = { version = "=0.47.2", default-features = false, features = ["std"] }
sha2 = "0.10"
ciborium = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

# Phase C.3-C — classifier envelope verification layers on top of the
# Ed25519/COSE_Sign1 primitive from `ephemeral-crypto`. This is the only
# cross-crate dependency the classifier takes; core- / CLI-layer wiring
# stays one-way (classifier depends on crypto, never the reverse).
ephemeral-crypto = { path = "../ephemeral-crypto" }

# Optional deps activated only by `test_fixtures`.  Deliberately distinct
# from the `[dev-dependencies]` block below: dev-deps are crate-private
# (used only by this crate's own `#[cfg(test)]` code), whereas an
# optional dep with a matching feature is reachable when a *downstream*
# crate opts in.  Without both, `ephemeral-core`'s dev-tests could not
# re-use the fixture API declared in `src/test_fixtures.rs`.
wat = { version = "=1.247.0", optional = true }
ed25519-dalek = { workspace = true, optional = true }
coset = { workspace = true, optional = true }

[dev-dependencies]
# Keeping `wat` here in addition to the optional dep above is
# intentional: the crate's internal unit tests (`src/runtime.rs`,
# `src/validate.rs`, `src/signature.rs`) compile inline WAT without
# requiring `cargo test --features test_fixtures`.  Cargo resolves the
# two identical `=1.247.0` specs to a single copy in the build graph.
wat = "=1.247.0"
proptest = { workspace = true }
# Dev-only Ed25519 sign path for the classifier crate's inline unit
# tests in `src/signature.rs`.  Production code never signs — only
# verifies — so this stays out of the release dependency graph for
# consumers who do not opt in to `test_fixtures`.
ed25519-dalek = { workspace = true }
coset = { workspace = true }
