[package]
name = "ephemeral-cli"
description = "CLI entry point for the EPHEMERAL reference validator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "ephemeral-validator"
path = "src/main.rs"

[dependencies]
ephemeral-core = { path = "../ephemeral-core" }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
