[package]
name = "ephemeral-cli"
description = "CLI entry point for the EPHEMERAL reference validator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "ephemeral-validator"
path = "src/main.rs"

[dependencies]
# The CLI is the conformance harness and needs the Phase C.2 live-Nitro
# dispatch path; that lives behind the `test-fixtures` feature on
# ephemeral-core and exposes the synthetic-root bypass. This is the
# one legitimate enable of that feature — production consumers of
# ephemeral-core must never opt in.
ephemeral-core = { path = "../ephemeral-core", features = ["test-fixtures"] }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
