[package]
name = "ephemeral-core"
description = "EPHEMERAL Agent-Authority Protocol reference validator library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
jsonschema = { workspace = true }
unicode-normalization = { workspace = true }
caseless = { workspace = true }
time = { workspace = true }
hex = { workspace = true }
ephemeral-crypto = { path = "../ephemeral-crypto" }
ephemeral-attestation = { path = "../ephemeral-attestation" }
# Phase C.3-C — classifier envelope verification is invoked from the
# Tariff check pipeline (§4.3 / step 9.5 in tariff.rs).  The classifier
# crate itself has no reverse-dependency on ephemeral-core, so this
# stays a one-way coupling.
ephemeral-classifier = { path = "../ephemeral-classifier" }
# Phase C.4 Session 4 — anomaly-library envelope verification is
# invoked from the `anomaly-library-reject` suite executor
# (`suites/anomaly_library.rs`), which is dispatched unconditionally
# from `runner.rs` and is part of `ephemeral-core`'s production
# public API.  This is therefore a runtime `[dependencies]` entry,
# NOT a `[dev-dependencies]` / feature-gated one — moving it would
# silently strip the anomaly-library suite from every downstream
# binary that links `ephemeral-core`.  No `features` key: the
# `test_fixtures` feature of `ephemeral-anomaly` MUST only be
# activated by test/tooling crates (vector-signer), never by this
# crate — the `ephemeral-prod-symbol-probe` tripwire guards this.
# One-way coupling: anomaly crate has no reverse-dep on
# `ephemeral-core`.
ephemeral-anomaly = { path = "../ephemeral-anomaly" }

[features]
# Enables the Phase C.2 live-Nitro dispatch path (classify_live_nitro + the
# synthetic-root bypass in ephemeral-attestation's test-fixtures feature).
# This MUST remain opt-in: the bypass allows inserting CA roots without
# fingerprint pinning, which is only safe inside the conformance harness.
# The reference CLI (ephemeral-cli) enables it explicitly; production
# consumers of ephemeral-core do not, so the live-path code is absent
# from their build entirely. Do not move this into `default`.
test-fixtures = ["ephemeral-attestation/test-fixtures", "ephemeral-attestation/rekor"]
# Phase C.2.5 live-Rekor dispatch path (classify_live_rekor + STH signature
# verification + Merkle inclusion-proof replay). Forwards the `rekor` feature
# into ephemeral-attestation which in turn pulls ed25519-dalek in as a hard
# dependency of the rekor module. Tied to `test-fixtures` only at the point
# of use (classify_live_rekor calls RekorKeySet::insert_trusted_key_for_test),
# so default production builds compile neither path.
rekor = ["ephemeral-attestation/rekor"]

[dev-dependencies]
anyhow = { workspace = true }
proptest = { workspace = true }
# Phase C.3-C Session 2 — classifier envelope construction for the tariff
# step-9.5 integration tests is consumed through ephemeral-classifier's
# opt-in `test_fixtures` feature, which in turn pulls wat / ed25519-dalek /
# coset as optional deps.  Using the feature keeps the previously duplicated
# signing key, KID constant, SHA-256 helper, CBOR encoder, and COSE envelope
# builder in exactly one place, and is guarded by the feature-leak tripwire
# (`tools/prod-symbol-probe`) so a regression cannot land silently.
ephemeral-classifier = { path = "../ephemeral-classifier", features = ["test_fixtures"] }
