[package]
name = "vector-signer"
description = "EPHEMERAL conformance vector COSE_Sign1 signing tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
coset = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
ephemeral-crypto = { path = "../../crates/ephemeral-crypto" }
ephemeral-attestation = { path = "../../crates/ephemeral-attestation", features = ["test-fixtures"] }
ephemeral-attestation-test-support = { path = "../../crates/ephemeral-attestation-test-support" }
